--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
   "author": "Eugene",
   "license": "MIT",
   "scripts": {
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "dependencies": {
+    "@types/react-datepicker": "^4.1.1",
+    "@types/uuid": "^8.3.1",
+    "bootstrap": "4.6.0",
+    "json-loader": "^0.5.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^1.6.1",
+    "react-datetime-picker": "^3.3.0",
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
